Refactoring and misc. frontend updates

--- a/SparcWeb/wwwroot/index.html
+++ b/SparcWeb/wwwroot/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Sparc</title>
+    <link rel="icon" type="image/x-icon" href="/images/icons/favicon.ico">
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" type="text/css" href="https://api.kodekit.io/greffe-winterweight.css">
@@ -12,7 +13,7 @@
 
 <body>
     <div id="app">Loading...</div>
-
+     
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
 </body>
