Refactor authentication and project structure
- Updated `ServiceCollectionExtensions` to implement a new authentication route group.
- Changed application URLs in `launchSettings.json` for local development.
- Modified `Sparc.Blossom.Cloud.json` to add new API paths and remove outdated tags.
- Added console logging in `BlossomApp.razor` for user identity.
- Removed `RunAsync()` and `Run()` methods from `IBlossomApplication`.
- Adjusted `BlossomBrowserApplication` to streamline async execution.
- Updated `Sparc.Blossom.csproj` to target `net9.0-browser` for Blazor WebAssembly support.
- Enhanced routing in `App.razor` with not-found handling.
- Created `index.html` with complete structure and loading UI.
- Cleaned up `Html.razor` by removing unnecessary attributes.
- Refined file handling in `AddIdea.razor`.
- Changed application builder type in `Program.cs` to `App`.
- Switched `Sparc2.csproj` SDK to `Microsoft.NET.Sdk.BlazorWebAssembly`.

--- a/Sparc2/Sparc2/wwwroot/index.html
+++ b/Sparc2/Sparc2/wwwroot/index.html
@@ -1,21 +1,31 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="@Assets["css/app.css"]" />
-    <link rel="stylesheet" href="@Assets["Sparc2.styles.css"]" />
+    <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="Sparc2.styles.css" />
     <link rel="icon" href="images/Logo.svg" sizes="any" type="image/svg+xml" />
     <link rel="stylesheet" href="https://use.typekit.net/mur1cay.css">
-    <ImportMap />
-    
-    <HeadOutlet />
 </head>
-<body>
-    <Sparc.Blossom.BlossomApp Program="Program" DefaultLayout="MainLayout" />
 
-    <script src="_framework/blazor.web.js"></script>
+<body>
+    <div id="app">
+        <svg class="loading-progress">
+            <circle r="40%" cx="50%" cy="50%" />
+            <circle r="40%" cx="50%" cy="50%" />
+        </svg>
+        <div class="loading-progress-text"></div>
+    </div>
+
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="." class="reload">Reload</a>
+        <span class="dismiss">🗙</span>
+    </div>
+    <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/dragging.js"></script>
     <script src="js/scrolling.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
@@ -23,10 +33,12 @@
     <script>
         // use a script tag or an external JS file
         document.addEventListener("DOMContentLoaded", (event) => {
-         gsap.registerPlugin(ScrollTrigger)
-         // gsap code here!
+            gsap.registerPlugin(ScrollTrigger)
+            // gsap code here!
         });
 
     </script>
+
 </body>
+
 </html>
